@@ -1,3 +1,12 @@
+2026-02-20T02:26:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22208824518 # 883
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-20
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 36 / 14 36
+* notice: next accum: outdated-unq outdated-all / unq all: 14 36 / 14 36
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-20 2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25 2026-01-26 2026-01-27 2026-01-28] / []
+
 2026-02-16T02:32:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22048153475 # 879
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
